# AnonLM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
datasets/: pii_mvp_dataset.csv
docs/: benchmarking.md
src/anonlm/: __init__.py  __main__.py  api.py  cli.py  config.py  deanonymize.py  engine.py  graph.py  nodes.py  normalizer.py  prompts.py  schema.py  state.py
src/anonlm/benchmarking/: __init__.py  history.py  reporting.py  runner.py  splits.py
tests/: test_benchmark_runner.py  test_benchmark_splits.py  test_cli.py  test_config.py  test_deanonymize.py  test_engine.py  test_nodes.py  test_normalizer.py
