[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "anonlm"
version = "0.1.0"
description = "Open-source PII anonymization agent with reproducible benchmarking for OpenAI-compatible models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AnonLM Contributors" }
]
keywords = ["pii", "anonymization", "llm", "privacy", "benchmarking", "langgraph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "langchain-core>=1.2.16",
  "langchain-openai>=1.1.10",
  "langgraph>=1.0.10",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "ruff>=0.11.0",
  "twine>=6.1.0"
]
test = [
  "pytest>=8.0.0"
]
docs = []

[project.scripts]
anonlm = "anonlm.cli:main"

[project.urls]
Homepage = "https://github.com/aritzjl/anonlm"
Repository = "https://github.com/aritzjl/anonlm"
Issues = "https://github.com/aritzjl/anonlm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anonlm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
